chore: upgrade to jdk 25